# ckanext-subscribe

./: MANIFEST.in  README.rst  dev-requirements.txt  pyproject.toml  setup.cfg
.github/workflows/: test.yml
ckanext/subscribe/: cli.py  config_declaration.yaml  email_auth.py  email_verification.py  notification.py  notification_email.py  plugin.py  utils.py
ckanext/subscribe/assets/: webassets.yml
ckanext/subscribe/i18n/: ckanext-subscribe.pot
ckanext/subscribe/templates/group/snippets/: info.html
ckanext/subscribe/templates/package/snippets/: info.html
ckanext/subscribe/templates/snippets/: organization.html
ckanext/subscribe/templates/subscribe/: manage.html  request_manage_code.html
